<resources>
    <string name="app_name">Chat</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="title_activity_register">Rejestracja</string>
    <string name="title_activity_main">Chat</string>

    <string name="send_button_text">Wyślij</string>
    <string name="login_button_text">Zaloguj</string>
    <string name="register_button_text">Zarejestruj</string>

    <string name="login_text">Login</string>
    <string name="password_text">Hasło</string>
    <string name="password_repeat_text">Potwierdź hasło</string>
    <string name="email_text">E-mail</string>

    <string name="invalidInput">Wprowadzone dane są nieprawidłowe</string>

    <string name="register_success">Zarejestrowano pomyślnie.</string>
    <string name="unknown_error">Nieznany błąd.</string>
    <string name="username_taken">Użytkownik o takiej nazwie już istnieje.</string>

    <string name="login_success">Zalogowano pomyślnie.</string>
    <string name="user_not_exists">Użytkownik o takiej nazwie nie istnieje!</string>
    <string name="invalid_password">Podane hasło jest nieprawidłowe.</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_test">TestActivity</string>
</resources>
