<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DADADA"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

    <TextView
        style="@style/editTextLabel"
        android:text="@string/login_text"
        android:id="@+id/login_text"
        android:layout_marginTop="0dp" />

    <EditText
        style="@style/editText"
        android:id="@+id/login_input"
        android:inputType="text" />

    <TextView
        style="@style/editTextLabel"
        android:text="@string/password_text"
        android:id="@+id/password_text" />

    <EditText
        style="@style/editText"
        android:inputType="textPassword"
        android:id="@+id/password_input" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">
        <Button
            style="@style/buttonBigMain"
            android:text="@string/login_button_text"
            android:id="@+id/login_button" />
        <Button
            style="@style/buttonBigRest"
            android:text="@string/register_button_text"
            android:id="@+id/register_button" />

    </LinearLayout>
</LinearLayout>